--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <a href="./1-gallery.html"></a>
+    <a href="./2-form.html"></a>
+
 
     <section>
       <h1>Lorem ipsum dolor sit amet.</h1>
@@ -17,7 +19,7 @@
     </section>
 
     <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+
 
     <script type="module" src="./main.js"></script>
   </body>
