--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <a href="./1-gallery.html"></a>
-    <a href="./2-form.html"></a>
 
+  <ul>
+    <li><a href="./1-gallery.html">Gallery</a></li>
+    <li><a href="./2-form.html">Form</a></li>
+  </ul>
 
     <section>
       <h1>Lorem ipsum dolor sit amet.</h1>
@@ -20,7 +22,5 @@
 
     <!-- Loads the specified .html file -->
 
-
-    <script type="module" src="./main.js"></script>
   </body>
 </html>
